# superellipsoid_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Superellipsoid.msg  SuperellipsoidArray.msg
