<package>
  <name>superellipsoid_msgs</name>
  <version>1.0.0</version>
  <description>
    superellipsoid_msgs provides messages for superellipsoid implicit definitions, 
    translation, rotation, and volume information.
  </description>
  <maintainer email="salih285@gmail.com">Salih Marangoz</maintainer>
  <license>TODO</license>

  <author email="salih285@gmail.com">Salih Marangoz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
