<?xml version="1.0"?>
<package format="2">
  <name>superellipsoid_msgs</name>
  <version>0.0.0</version>
  <description>superellipsoid_msgs provides messages for superellipsoid implicit definitions, translation, rotation, and volume information.</description>
  
  <maintainer email="salih285@gmail.com">Salih Marangoz</maintainer>
  <author email="salih285@gmail.com">Salih Marangoz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
